--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         p {
             text-indent: 32px;
-            margin: 32px;;
+           /* margin: 32px; */
         }
     </style>
 </head>
