--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         p {
             text-indent: 32px;
-           /* margin: 32px; */
+            margin: 32px;;
         }
     </style>
 </head>
@@ -22,60 +22,28 @@
   <h1>第五讲 动态平衡系统</h1>
   <p>中医最大的特点，就是把人体当作动态平衡系统来对待。这是中医和其他医学，特别是西医最大的不同。</p>
   <p>什么是动态平衡系统呢？就是能够在一定范围内维持自身稳定的系统。</p>
-  <p>凡是能够在这个世界上存在一段时间的事物，都必须能够在一定范围内维持自身的稳定，否则它就不能在这个世界存在一段时间，会很快地消失。
-      比如：元素周期表上现在有 108 位元素，后面还有没有新的元素呢？从道理上说，肯定是有的。因为一定的质子和一定的中子结合就可以成为一个新的原子核，
-      新的元素。但是这么多年过去了，现代的科技手段比居里夫人发现镭元素时候不知道要先进多少倍，为什么仍然没有人发现 109 号元素呢？因为 108 位元素
-      后面的元素没有保持自身稳定的能力，一会儿就放射掉了，根本就不能在这个世界上存在多久。</p>
-  <p>能够自我维持稳定，说明系统内部有自我调节的机制。因为有自我调节机制，所以对外界的刺激都会做出相应的调节反应。外界针对动态平衡系统的所有行为，都会
-      得到一个相反的结果。比如，你想让它向下，给它一个向下的力量，系统为了维护自身的平衡，就会自动产生一个向上的力量来对抗这个向下的力量，结果等外
-      力撤掉以后，它不仅不向下，反倒向上了。这是动态平衡系统的最根本的特性，认识到这一点非常重要。</p>
-  <p>我对动态平衡系统的认识最早来自太极拳。大约是在大学二年级的时候，我翻阅一本陈式太极拳的书。看到一个动作的讲解，说两个胳膊先压向对方，然后
-      猛力回带，对方就倒了，我当时一下子就想通了很多问题。因为对方是一个活人，他有维护自身平衡的意识，你先向里压他，他必然用力向外反抗，以保持自身
-      平衡，这样你再突然顺着他反抗的力量往回拉他，他肯定就倒了。这就是中华武术和西方拳击在技术理念上的区别。西方拳击把对手都看成是沙袋，拳头直接打，
-      力大拳快就赢了。中华武术把对手看成一个动态平衡系统，充分利用对手自己的力量来把对手打倒。</p>
+  <p>凡是能够在这个世界上存在一段时间的事物，都必须能够在一定范围内维持自身的稳定，否则它就不能在这个世界存在一段时间，会很快地消失。比如：元素周期表上现在有 108 位元素，后面还有没有新的元素呢？从道理上说，肯定是有的。因为一定的质子和一定的中子结合就可以成为一个新的原子核，新的元素。但是这么多年过去了，现代的科技手段比居里夫人发现镭元素时候不知道要先进多少倍，为什么仍然没有人发现 109 号元素呢？因为 108 位元素后面的元素没有保持自身稳定的能力，一会儿就放射掉了，根本就不能在这个世界上存在多久。</p>
+  <p>能够自我维持稳定，说明系统内部有自我调节的机制。因为有自我调节机制，所以对外界的刺激都会做出相应的调节反应。外界针对动态平衡系统的所有行为，都会得到一个相反的结果。比如，你想让它向下，给它一个向下的力量，系统为了维护自身的平衡，就会自动产生一个向上的力量来对抗这个向下的力量，结果等外力撤掉以后，它不仅不向下，反倒向上了。这是动态平衡系统的最根本的特性，认识到这一点非常重要。</p>
+  <p>我对动态平衡系统的认识最早来自太极拳。大约是在大学二年级的时候，我翻阅一本陈式太极拳的书。看到一个动作的讲解，说两个胳膊先压向对方，然后猛力回带，对方就倒了，我当时一下子就想通了很多问题。因为对方是一个活人，他有维护自身平衡的意识，你先向里压他，他必然用力向外反抗，以保持自身平衡，这样你再突然顺着他反抗的力量往回拉他，他肯定就倒了。这就是中华武术和西方拳击在技术理念上的区别。西方拳击把对手都看成是沙袋，拳头直接打，力大拳快就赢了。中华武术把对手看成一个动态平衡系统，充分利用对手自己的力量来把对手打倒。</p>
   <p>面对一个动态平衡系统，你不能用直线思维，不能想它向上，你就用一个向上的力去推它，这样的直线思维往往让你得到的是相反的结果。</p>
-  <p>“将欲取之，必先予之”，老子的这句话大家肯定都听说过，但并不是所有人都能懂老子为什么要这样说。老子作为中华传统文化经典，流传几千年，大家都说得
-      习惯了，成了顺口溜，也就懒得去思考其中的道理了。很多学太极拳的人也不一定明白为什么行拳的时候总要欲左先右，欲上先下，拐个弯来行拳。祖祖辈辈
-      都这么教，大家都这么学，所以后面的学习者也跟着这么做，并不去思考其中的道理。理解了动态平衡系统的特性以后，这其中所蕴含的道理就容易理解了。
-      之所以要这么反着来做，就是因为我们面对的不是一个死靶子，而是一个动态平衡系统，它具有自我调节的机制，如果你想它往上，你直接给它一个向上的力量，它
-      就会自动产生一个向下的力量来抵抗你的力量，导致得到的结果与你的实际想法完全相反。把这个道理想清楚了，才是真正理解了先哲的本意。学习中医经典，也要想想先哲
-      为什么要这么说？他的道理在哪里？不能只是死记硬背，把经典当教条。习惯是最可怕的力量，让人见怪不怪，不去深究，最后和大道越离越远。</p>
-  <p>人体就是一个动态平衡系统，要调节人体，必须按照动态平衡系统的规律来进行，而不能用简单的直线思维来处理。如果把人体当做一个简单的机械系统来对待，
-      不仅不能真正地解决问题，甚至会给身体带来伤害。</p>
-  <p>比如，年纪大了很多人会血压升高，为什么呢？西医解释说，血压升高，不外乎三个问题：一，心脏收缩力加强；二，血管管腔变窄，因为血管收缩或者管壁粥样斑块；三，血容量变大
-      。所以降压药也就是从这三个方向来降压：抑制心脏、扩张血管、利尿减少血容量。</p>
+  <p>“将欲取之，必先予之”，老子的这句话大家肯定都听说过，但并不是所有人都能懂老子为什么要这样说。老子作为中华传统文化经典，流传几千年，大家都说得习惯了，成了顺口溜，也就懒得去思考其中的道理了。很多学太极拳的人也不一定明白为什么行拳的时候总要欲左先右，欲上先下，拐个弯来行拳。祖祖辈辈都这么教，大家都这么学，所以后面的学习者也跟着这么做，并不去思考其中的道理。理解了动态平衡系统的特性以后，这其中所蕴含的道理就容易理解了。之所以要这么反着来做，就是因为我们面对的不是一个死靶子，而是一个动态平衡系统，它具有自我调节的机制，如果你想它往上，你直接给它一个向上的力量，它就会自动产生一个向下的力量来抵抗你的力量，导致得到的结果与你的实际想法完全相反。把这个道理想清楚了，才是真正理解了先哲的本意。学习中医经典，也要想想先哲为什么要这么说？他的道理在哪里？不能只是死记硬背，把经典当教条。习惯是最可怕的力量，让人见怪不怪，不去深究，最后和大道越离越远。</p>
+  <p>人体就是一个动态平衡系统，要调节人体，必须按照动态平衡系统的规律来进行，而不能用简单的直线思维来处理。如果把人体当做一个简单的机械系统来对待，不仅不能真正地解决问题，甚至会给身体带来伤害。</p>
+  <p>比如，年纪大了很多人会血压升高，为什么呢？西医解释说，血压升高，不外乎三个问题：一，心脏收缩力加强；二，血管管腔变窄，因为血管收缩或者管壁粥样斑块；三，血容量变大。所以降压药也就是从这三个方向来降压：抑制心脏、扩张血管、利尿减少血容量。</p>
   <p>大家想想，年轻时候，心肌强壮，为什么那个时候心脏收缩力不嫌大，人老了，心肌老化了，反倒嫌心肌收缩力大了？</p>
-  <p>年轻的时候，血管括约肌更有弹性，为什么那个时候收缩不过度，人老了，血管括约肌都松弛了，血管收缩反而过度了？血管内壁形成了粥样斑块，的确可以使所处位置的
-      血管官腔变窄，但是对整个血管系统的总容积究竟有多大影响，也还没有定论。而且很多高血压病人在没有动脉粥样硬化之前已经血压很高了。</p>
-  <p>年轻人机体内水分丰富，那时候血容量不大，现在老了血容量反倒多了，这不是很奇怪的事情吗？如果说老年人干瘪的皮肤还嫌体内水分多，需要利尿剂来利尿，那么，那些年轻的女性每天
-      都补水岂不是血压更高？</p>
-  <p>这样一步步追问下来，你就很容易发现西医的三种解释血压升高的方法都不是老年人血压升高的真正原因。西医的三种降压方法并非解决导致老年人血压升高的真正原因，都是看到血压升高
-      ，直接用外力来降低血压，是直线思维的产物，会引发机体的反弹。</p>
-  <p>人体必须维持一定的血压以保证全身的各个部分都能从心脏获得足够的血液。血压能在一定的范围之内保持稳定，说明人体自身有血压调节的机制，会根据人体供血需要来调节血压。当血压低不足以
-      供应全身的血液时，机体的升压机制能够自我升高血压；当血压高了全身血液供应过量时，机体的降压机制又能够自我降低血压。</p>
-  <p>年轻的时候气血顺畅，身体各个部位的组织很容易就能得到充足的血液，心肌根本无需努力地收缩泵血，心肌虽然很强壮，表现出来的收缩力也很大。老年人之所以会血压升高，是因为
-      机体某部分组织无法正常获得充足的血液，为了保证这部分机体组织的血液供应，机体的血压调节机制就会让心脏努力泵血，心肌虽然老化，但是表现出来的
-      收缩力比年轻时候还大，血压随之升高。它的好处在于让机体各部分组织获得充分的血液供应，它的弊端在于心脏这种超负荷的工作到了一定的程度以后，一方面会给心肌自身带来损伤，
-      另一方面如果血管承受不了高压就有爆裂出血的危险。</p>
-  <p>现在大家都只看到高血压的危害，通过服用降压药直接降低血压。这种不以恢复缺血组织的血液供应为目标的降压方法，会让机体的升压机制更加亢进，最后只有两种结果：一，药物无法控制血压，需要不断
-      地加大降压药的量；二，血压被药物控制住，组织缺血越来越严重。</p>
-  <p>所以，高血压的正确治疗方法是通过辨证论治，找到是什么原因导致的机体哪部分缺血，恢复缺血组织的血液供应的顺畅，机体自身的血压调节系统自然就不会让心
-      脏努力泵血，血压也自然恢复正常。</p>
+  <p>年轻的时候，血管括约肌更有弹性，为什么那个时候收缩不过度，人老了，血管括约肌都松弛了，血管收缩反而过度了？血管内壁形成了粥样斑块，的确可以使所处位置的血管官腔变窄，但是对整个血管系统的总容积究竟有多大影响，也还没有定论。而且很多高血压病人在没有动脉粥样硬化之前已经血压很高了。</p>
+  <p>年轻人机体内水分丰富，那时候血容量不大，现在老了血容量反倒多了，这不是很奇怪的事情吗？如果说老年人干瘪的皮肤还嫌体内水分多，需要利尿剂来利尿，那么，那些年轻的女性每天都补水岂不是血压更高？</p>
+  <p>这样一步步追问下来，你就很容易发现西医的三种解释血压升高的方法都不是老年人血压升高的真正原因。西医的三种降压方法并非解决导致老年人血压升高的真正原因，都是看到血压升高，直接用外力来降低血压，是直线思维的产物，会引发机体的反弹。</p>
+  <p>人体必须维持一定的血压以保证全身的各个部分都能从心脏获得足够的血液。血压能在一定的范围之内保持稳定，说明人体自身有血压调节的机制，会根据人体供血需要来调节血压。当血压低不足以供应全身的血液时，机体的升压机制能够自我升高血压；当血压高了全身血液供应过量时，机体的降压机制又能够自我降低血压。</p>
+  <p>年轻的时候气血顺畅，身体各个部位的组织很容易就能得到充足的血液，心肌根本无需努力地收缩泵血，心肌虽然很强壮，表现出来的收缩力也很大。老年人之所以会血压升高，是因为机体某部分组织无法正常获得充足的血液，为了保证这部分机体组织的血液供应，机体的血压调节机制就会让心脏努力泵血，心肌虽然老化，但是表现出来的收缩力比年轻时候还大，血压随之升高。它的好处在于让机体各部分组织获得充分的血液供应，它的弊端在于心脏这种超负荷的工作到了一定的程度以后，一方面会给心肌自身带来损伤，另一方面如果血管承受不了高压就有爆裂出血的危险。</p>
+  <p>现在大家都只看到高血压的危害，通过服用降压药直接降低血压。这种不以恢复缺血组织的血液供应为目标的降压方法，会让机体的升压机制更加亢进，最后只有两种结果：一，药物无法控制血压，需要不断地加大降压药的量；二，血压被药物控制住，组织缺血越来越严重。</p>
+  <p>所以，高血压的正确治疗方法是通过辨证论治，找到是什么原因导致的机体哪部分缺血，恢复缺血组织的血液供应的顺畅，机体自身的血压调节系统自然就不会让心脏努力泵血，血压也自然恢复正常。</p>
   <p>血糖也是这么回事。不从源头上解决导致 2 型糖尿病人血糖升高的真正原因，只是看到血糖值升高就用外力直接降低血糖，也会引发机体的反弹。</p>
   <p>人体要维持一定的血糖量以保证机体组织糖分的供应，不能太高，也不能太低，必须维持在一定的范围内，说明人体自身有血糖调节机制。</p>
-  <p>2 型糖尿病人可以分为两个部分：一部分 2 型糖尿病人完全是因为摄入营养过多，机体消耗少，营养过剩，停留在血液里，血液中糖、脂等成分的含量都比正常人高。
-  这类 2 型糖尿病人一般都非常强壮，胃口好，食量大，运动少，纯属营养过剩，只要控制好饮食，多运动，血糖值就能逐渐恢复正常。</p>
-  <p>还有一部分 2 型糖尿病人，并不强壮，饮食也不多，但是血糖高。这部分 2 型糖尿病人是因为机体的某部分组织不能得到足够的血糖供应，机体自身的血糖机制发挥作用，
-      以保证这部分组织能够得到正常的血糖供应，于是血糖值升高。直接降血糖，只能导致病人机体自身的升血糖机制更加亢进，降糖药要想维持正常的血糖值必须不断加量。
-      如果能够解决部分组织不能得到足够的血糖供应的问题，人体的血糖值在正常在正常范围内就能保证全身的血糖供应，病人的血糖自然就恢复正常了。</p>
-  <p>人体是一个动态平衡系统，不能用直线思维来解决动态平衡系统的问题，一定要按照动态平衡系统的规律来，一定要按照动态平衡对待人体，系统的规律来对待
-      人体。只有这样才能顺应生命的规律，才不会损伤机体，否则，所采取的治病手段不但治不好病，反倒成了导致新的疾病的病因。</p>
-  <p>“动态平衡系统”这个名词来自西方科学，中医并没有“动态平衡系统”的名称，西医的生理学近年来倒是在教材上提到了人体是一个动态平衡系统，那为什么我还说把
-      人体当做“动态平衡系统”来对待是中医学的特色？这是因为中医有非常完善的有关动态平衡系统的理论来指导医疗实践，按照动态平衡系统的规律创造了很多解决人体
-      健康问题的医疗方案，这类方案看上去与所要达到的目的相反却能更好地达到目的。如果不能做到这一点，依然直线思维地处理有关机体的问题，即使提出了一百个名词，
-      也不能说他对此有所认识。</p>
-  <p>指导中医进行医疗实践的理论就是阴阳五行学说。阴阳五行学说的本质就是描述动态平衡系统运行规律的理论。阴阳五行学说是中医的理论核心。无论中国古代的先人有多少医学
-      实践，在没有和阴阳五行学说结合以前，就没有形成真正的中医理论。</p>
+  <p>2 型糖尿病人可以分为两个部分：一部分 2 型糖尿病人完全是因为摄入营养过多，机体消耗少，营养过剩，停留在血液里，血液中糖、脂等成分的含量都比正常人高。这类 2 型糖尿病人一般都非常强壮，胃口好，食量大，运动少，纯属营养过剩，只要控制好饮食，多运动，血糖值就能逐渐恢复正常。</p>
+  <p>还有一部分 2 型糖尿病人，并不强壮，饮食也不多，但是血糖高。这部分 2 型糖尿病人是因为机体的某部分组织不能得到足够的血糖供应，机体自身的血糖机制发挥作用，以保证这部分组织能够得到正常的血糖供应，于是血糖值升高。直接降血糖，只能导致病人机体自身的升血糖机制更加亢进，降糖药要想维持正常的血糖值必须不断加量。如果能够解决部分组织不能得到足够的血糖供应的问题，人体的血糖值在正常在正常范围内就能保证全身的血糖供应，病人的血糖自然就恢复正常了。</p>
+  <p>人体是一个动态平衡系统，不能用直线思维来解决动态平衡系统的问题，一定要按照动态平衡系统的规律来，一定要按照动态平衡对待人体，系统的规律来对待人体。只有这样才能顺应生命的规律，才不会损伤机体，否则，所采取的治病手段不但治不好病，反倒成了导致新的疾病的病因。</p>
+  <p>“动态平衡系统”这个名词来自西方科学，中医并没有“动态平衡系统”的名称，西医的生理学近年来倒是在教材上提到了人体是一个动态平衡系统，那为什么我还说把人体当做“动态平衡系统”来对待是中医学的特色？这是因为中医有非常完善的有关动态平衡系统的理论来指导医疗实践，按照动态平衡系统的规律创造了很多解决人体健康问题的医疗方案，这类方案看上去与所要达到的目的相反却能更好地达到目的。如果不能做到这一点，依然直线思维地处理有关机体的问题，即使提出了一百个名词，也不能说他对此有所认识。</p>
+  <p>指导中医进行医疗实践的理论就是阴阳五行学说。阴阳五行学说的本质就是描述动态平衡系统运行规律的理论。阴阳五行学说是中医的理论核心。无论中国古代的先人有多少医学实践，在没有和阴阳五行学说结合以前，就没有形成真正的中医理论。</p>
 
 
 
