--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
   <p>人体是一个动态平衡系统，不能用直线思维来解决动态平衡系统的问题，一定要按照动态平衡系统的规律来，一定要按照动态平衡对待人体，系统的规律来对待人体。只有这样才能顺应生命的规律，才不会损伤机体，否则，所采取的治病手段不但治不好病，反倒成了导致新的疾病的病因。</p>
   <p>“动态平衡系统”这个名词来自西方科学，中医并没有“动态平衡系统”的名称，西医的生理学近年来倒是在教材上提到了人体是一个动态平衡系统，那为什么我还说把人体当做“动态平衡系统”来对待是中医学的特色？这是因为中医有非常完善的有关动态平衡系统的理论来指导医疗实践，按照动态平衡系统的规律创造了很多解决人体健康问题的医疗方案，这类方案看上去与所要达到的目的相反却能更好地达到目的。如果不能做到这一点，依然直线思维地处理有关机体的问题，即使提出了一百个名词，也不能说他对此有所认识。</p>
   <p>指导中医进行医疗实践的理论就是阴阳五行学说。阴阳五行学说的本质就是描述动态平衡系统运行规律的理论。阴阳五行学说是中医的理论核心。无论中国古代的先人有多少医学实践，在没有和阴阳五行学说结合以前，就没有形成真正的中医理论。</p>
+  
+  <p>转自《什么是中医 关于动态平衡系统的医学》- 邹时祯 著</p>
+  <p>邹时祯 新浪博客：<a href="http://blog.sina.com.cn/u/1173935352">http://blog.sina.com.cn/u/1173935352</a><br/>
+     &nbsp;&nbsp;邹时祯 新浪微博：<a href="http://www.weibo.com/u/1173935352?topnav=1&wvr=6&topsug=1">http://www.weibo.com/u/1173935352?topnav=1&wvr=6&topsug=1</a>
+
+  </p>
 
 
 
