--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         h1,h2,h3,h4,h5,h6 {
             text-align: center;
+            background-color: #ff9800 !important;
         }
         body {
             background-color: #f5f5f5;
