--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             background-color: #ff9800 !important;
         }
         body {
-            /* background-color: #f5f5f5; */
+            background-color: #fcf3e2;
             /*color: white;*/
         }
         p {
