--- a/index.html
+++ b/index.html
@@ -1593,6 +1593,7 @@ ul.w3-ul li:last-child {
         div {
             margin: 16px;
             padding: 16px;
+            text-indent: 32px;
             
         }
         a:link {
